--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary mb-4">Kirim</button>
+              <button type="submit" class="btn btn-success mb-4">Kirim</button>
             </form>
           </div>
         </div>
